--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="my-works">
+                <section id="my-works" class="fade-in">
                     <h3>MY WORKS</h3>
                     <!-- Tabs for Categories -->
                     <div class="tabs">
